--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,20 @@ on:
     tags:
       - 'v*'
 
+
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual build (optional)'
+        required: false
+        default: 'Manual run from main branch'
+
 jobs:
   build-and-release:
     name: Build and Upload Release
     runs-on: ubuntu-latest
+
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: Checkout code
